# job_apply_agent

./: .env.example  CLAUDE.md  Job Application AI Agent — Build Plan for Claude Code.md  README.md
backend/: config.py  db.py  main.py  pyproject.toml
backend/agents/: cv_tailor.py  letter_writer.py  orchestrator.py  researcher.py  scorer.py
backend/models/: application.py  candidate.py
backend/routers/: applications.py  documents.py  stream.py
backend/tools/: cv_parser.py  document_export.py
frontend/: package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ApplicationTracker.jsx  FitScore.jsx  OutputPanel.jsx  StatusStream.jsx  UploadPanel.jsx
frontend/src/pages/: ApplicationDetail.jsx  Dashboard.jsx
